--- a/index.html
+++ b/index.html
@@ -5,7 +5,15 @@
   <title>黃金貿發谷</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="shortcut icon" href="favicon.ico">
+  <meta name="description" content="促進黃色經濟圈，協助良心商店對外貿易，製造手足就業機會。">
+  <meta name="keywords" content="黃色經濟圈,良心商店,就業機會">
+  <meta name="author" content="黃金貿發谷">
+  <meta property="og:title" content="黃金貿發谷" />
+  <meta property="og:url" content="https://hkgtdg.github.io/" />
+  <meta property="og:description" content="促進黃色經濟圈，協助良心商店對外貿易，製造手足就業機會。">
+  <meta property="og:image" content="images/logo5.gif">
+  <meta property="og:locale" content="zh_hk" />
+  <link rel="shortcut icon" href="favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=DM+Serif+Display:400,400i|Roboto+Mono&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="css/animate.css">
